--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "ezoterra",
-  "version": "1.0.0",
-  "description": "Ezoterra astrology consultation platform with production-ready authentication",
-  "main": "index.js",
-  "scripts": {
-    "dev": "vercel dev",
-    "deploy": "vercel --prod",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/artemregi/Ezotera_v2.git"
-  },
-  "keywords": [
-    "astrology",
-    "authentication",
-    "jwt",
-    "vercel",
-    "serverless"
-  ],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/artemregi/Ezotera_v2/issues"
-  },
-  "homepage": "https://github.com/artemregi/Ezotera_v2#readme",
-  "engines": {
-    "node": ">=18.x"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^17.3.1",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
-    "validator": "^13.11.0"
-  }
+    "name": "ezoterra",
+    "version": "1.0.0",
+    "description": "Ezoterra astrology consultation platform with production-ready authentication",
+    "main": "index.js",
+    "scripts": {
+          "dev": "vercel dev",
+          "deploy": "vercel --prod",
+          "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+          "type": "git",
+          "url": "git+https://github.com/artemregi/Ezotera_v2.git"
+    },
+    "keywords": [
+          "astrology",
+          "authentication",
+          "jwt",
+          "vercel",
+          "serverless"
+    ],
+    "author": "",
+    "license": "ISC",
+    "type": "commonjs",
+    "bugs": {
+          "url": "https://github.com/artemregi/Ezotera_v2/issues"
+    },
+    "homepage": "https://github.com/artemregi/Ezotera_v2#readme",
+    "engines": {
+          "node": ">=18.x"
+    },
+    "dependencies": {
+          "@supabase/supabase-js": "^2.47.10",
+          "bcryptjs": "^2.4.3",
+          "dotenv": "^17.3.1",
+          "jsonwebtoken": "^9.0.2",
+          "pg": "^8.11.3",
+          "validator": "^13.11.0"
+    }
 }
