chore: cache bust to rebuild with new database password

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,4 @@ APP_URL=https://ezoterra.vercel.app
 # Optional: For rate limiting with Upstash Redis (production enhancement)
 # UPSTASH_REDIS_URL=
 # UPSTASH_REDIS_TOKEN=
+# Cache bust - 17 фев 2026 г. 20:27:02
